--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-WEBSITE UNDER CONSTRUCTION
+WEBSITE UNDER CONSTRUCTION<br>
 
-Check back soon for updates
+Check back soon for updates<br>
 
 Copyright 2016 Valentina Pardi
