--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-WEBSITE UNDER CONSTRUCTION<br>
+<h1>WEBSITE UNDER CONSTRUCTION<br></h1>
 
-Check back soon for updates<br>
+<h2>Check back soon for updates<br></h2>
 
 Copyright 2016 Valentina Pardi
