--- a/about.html
+++ b/about.html
@@ -2,6 +2,6 @@
 
 <h1>About Me</h1>
 
-<p>My name is Valentina Pardi and I am a Graphic Design student currently located in Miami.</p> 
+<p>My name is Valentina Pardi and I am a Graphic Design student living in Miami.</p> 
 
 </html> 
