--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
+
 <h1>WEBSITE UNDER CONSTRUCTION<br></h1>
 
 <h2>Check back soon for updates<br></h2>
 
 Copyright 2016 Valentina Pardi
+
+</html>
