--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<head>
+  <title>Valentina Pardi | Home</title>
+</head>
 <h1>WEBSITE UNDER CONSTRUCTION<br></h1>
 
 <h2>Check back soon for updates<br></h2>
