--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <head>
   <title>Valentina Pardi | Home</title>
 </head>
+<body>
 <h1>WEBSITE UNDER CONSTRUCTION<br></h1>
 
 <h2>Check back soon for updates<br></h2>
 
 Copyright 2016 Valentina Pardi
+</body>
