--- a/about.html
+++ b/about.html
@@ -1,7 +1,11 @@
 <!doctype html> 
-
+<head>
+  <title>Valentina Pardi | About Me</title>
+</head>
+<body>
 <h1>About Me</h1>
 
 <p>My name is Valentina Pardi and I am a Graphic Design student living in Miami.</p> 
 
 </html> 
+</body>
