--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Valentina Pardi | Home</title>
 </head>
 <body>
-<h1>WEBSITE UNDER CONSTRUCTION<br></h1>
+<h1>Designs by Valentina Pardi<br></h1>
 
 <h2>Check back soon for updates<br></h2>
 
