--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <title>Valentina Pardi | Home</title>
 </head>
 <body>
-<h1>Designs by Valentina Pardi<br></h1>
+<h1>Designs<br></h1>
+<h3>by Valentina Pardi</h3><br>
 
-<h2>Check back soon for updates<br></h2>
+Check back soon for updates<br>
 
 Copyright 2016 Valentina Pardi
 </body>
