--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>Valentina Pardi | Home</title>
 </head>
 <body>
-<h1>Designs<br></h1>
-<h3>by Valentina Pardi</h3><br>
+<h1>Designs</h1>
+<h4>by Valentina Pardi</h4><br>
 
 Check back soon for updates<br>
 
