--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Valentina Pardi | Home</title>
 </head>
 <body>
-<h1>Designs</h1>
+<h1>UA Designs</h1>
 <h4>by Valentina Pardi</h4><br>
 
 Check back soon for updates<br>
