--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <head>
   <title>Valentina Pardi | Home</title>
+  <style>
+    body{
+    text-align: center;
+    background-color: black;
+    color: white
+    font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
 <h1>UA Designs</h1>
