--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     body{
     text-align: center;
     background-color: black;
-    color: white
+    color: white;
     font-family: sans-serif;
     }
   </style>
