--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     text-align: center;
     background-color: black;
     color: white;
-    font-family: sans-serif;
+    font-family: helvetica;
     }
   </style>
 </head>
