--- a/index.html
+++ b/index.html
@@ -17,4 +17,7 @@
 Check back soon for updates<br>
 
 <p>Copyright 2016 Valentina Pardi
+
+<a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | Twitter | Instagram
+
 </body>
