--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ Check back soon for updates<br>
 
 <p>Copyright 2016 Valentina Pardi
 
-<a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | Twitter | Instagram
+<a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | <a href="https://twitter.com/payval_">Twitter</a> | <a href="https://www.instagram.com/itsvalzzz/">Instagram</a>
 
 </body>
