--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
+<img src="https://www.flickr.com/photos/92274191@N05/24400724751/in/dateposted-public/"
 <h1>UA Designs</h1>
 <h4>by Valentina Pardi</h4><br>
 
