--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-<img src="https://www.flickr.com/photos/92274191@N05/24400724751/in/dateposted-public/">
+<img src="http://i.imgur.com/iuo9NvR.png">
 <h1>UA Designs</h1>
 <h4>by Valentina Pardi</h4><br>
 
