--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-<img src="http://i.imgur.com/iuo9NvR.png">
+<img src="http://i.imgur.com/iuo9NvR.png"></img>
 <h1>UA Designs</h1>
 <h4>by Valentina Pardi</h4><br>
 
