--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-<img src="http://i.imgur.com/iuo9NvR.png" height="650"></img>
+<img src="http://i.imgur.com/R5sun4z.png" height="650"></img>
 <h4>by Valentina Pardi</h4><br>
 
 Check back soon for updates<br>
