--- a/about.html
+++ b/about.html
@@ -1,7 +1,16 @@
 <!doctype html> 
 <head>
+  
   <title>Valentina Pardi | About Me</title>
 </head>
+<style>
+    body{
+    text-align: center;
+    background-color: white;
+    color: black;
+    font-family: helvetica;
+    }
+  </style>
 <body>
 <h1>About Me</h1>
 
