--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@ Check back soon for updates<br>
 
 <a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | <a href="https://twitter.com/payval_">Twitter</a> | <a href="https://www.instagram.com/itsvalzzz/">Instagram</a>
 
+<a><img src="http://uxrepo.com/static/icon-sets/ionicons/svg/social-linkedin.svg"></img></a>
 </body>
