--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="icon" type="image/png" href="http://i.imgur.com/R5sun4z.png">
+  <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <title>Valentina Pardi | Home</title>
   <style>
     body{
