--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 <body>
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
-<h4>by Valentina Pardi</h4><br>
 
-Check back soon for updates<br>
+<p>Check back soon for updates
 
 <p>Copyright 2016 Valentina Pardi
 
