--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     background-color: white;
     color: black;
     font-family: helvetica;
+    <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
     }
   </style>
 </head>
