--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     text-align: center;
     background-color: white;
     color: black;
+    font-family: helvetica;
     }
   </style>
-  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
