--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
-
+HOME | ABOUT ME | WORK | CONTACT ME |
 <p>Check back soon for updates
 
-<p>Copyright 2016 Valentina Pardi
+<p>Copyright 2016 Valentina Pardi<br>
 
 <a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | <a href="https://twitter.com/payval_">Twitter</a> | <a href="https://www.instagram.com/itsvalzzz/">Instagram</a><br>
 
