--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
-HOME | ABOUT ME | WORK | CONTACT ME | <br>
-<p>Check back soon for updates
+
+<p>HOME | ABOUT ME | WORK | CONTACT ME
 
 <p>Copyright 2016 Valentina Pardi<br>
 
