--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p>HOME | ABOUT ME | WORK | CONTACT ME
 
-<p>Copyright 2016 Valentina Pardi<br>
+<p>Valentina Pardi © 2016<br>
 
 <a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | <a href="https://twitter.com/payval_">Twitter</a> | <a href="https://www.instagram.com/itsvalzzz/">Instagram</a><br>
 
