--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
   </style>
 </head>
-<body>
+<body background="http://i.imgur.com/hpV09Jn.png">
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
 
 <p>HOME | ABOUT ME | WORK | CONTACT ME
