--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <p>HOME | ABOUT ME | WORK | CONTACT ME
 
-<p>Valentina Pardi © 2016<br>
 
-<a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile">LinkedIn</a> | <a href="https://twitter.com/payval_">Twitter</a> | <a href="https://www.instagram.com/itsvalzzz/">Instagram</a><br>
-<a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a>
+<a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
+<p>Valentina Pardi © 2016<br>
 </body>
