--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     font-family: helvetica;
     }
   </style>
-<body>
+<body background="http://i.imgur.com/LlPLCyG.png">
 <h1>About Me</h1>
 
 <p>My name is Valentina Pardi and I am a Graphic Design student living in Miami.</p> 
