--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body background="http://i.imgur.com/LlPLCyG.png">
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
 
-<p>HOME | ABOUT ME | WORK | CONTACT ME<br>
+<p>HOME | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br>
 
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
