--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <title>Valentina Pardi | Home</title>
   <style>
