--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!doctype html> 
 <head>
-  
+  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
   <title>Valentina Pardi | About Me</title>
 </head>
 <style>
