--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
     }
   </style>
 </head>
-html { 
-  background: url("http://i.imgur.com/LlPLCyG.png") no-repeat center center fixed; 
-  -webkit-background-size: contain;
-  -moz-background-size: contain;
-  -o-background-size: contain;
-  background-size: contain;
-}
+<body background="http://i.imgur.com/LlPLCyG.png">
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
 
 <p>HOME | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br>
