--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
   <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <title>Valentina Pardi | Home</title>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
   <style>
     body{
     text-align: center;
     background-color: white;
     color: black;
-    font-family: helvetica;
+    font-family: 'Dosis', sans-serif;;
     }
   </style>
 </head>
