--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     color: black;
     font-family: 'Dosis', sans-serif;;
     }
+    a {
+  color: black
+}
   </style>
 </head>
 <body background="http://i.imgur.com/LlPLCyG.png">
