--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     font-family: 'Dosis', sans-serif;;
     }
     a {
-  color: black
+  color: black;
+  text-decoration: none;
 }
   </style>
 </head>
