--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <body background="http://i.imgur.com/LlPLCyG.png">
 <img src="http://i.imgur.com/sEqWzk4.png" height="650"></img>
 
+<h1>UA Designs Webpage</h1>
+<h3>designed by: Valentina Pardi</h3>
+<p>Welcome to UA Designs webpage.</p>
+
 <strong><p>HOME | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></strong>
 
 
