--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body background="http://i.imgur.com/LlPLCyG.png">
-<img src="http://imgur.com/5x9NxZn" height="650"></img>
+<img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
 
 <h1>UA Designs Webpage</h1>
 <h3>designed by: Valentina Pardi</h3>
