--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!doctype html> 
 <head>
+  <meta charset="UTF-8">
   <title>Valentina Pardi | About Me</title>
   <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
 </head>
