--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     background-color: white;
     color: black;
     font-family: 'Dosis', sans-serif;;
+     background-repeat:no-repeat;
+     background-size:cover;
     }
     a {
   color: black;
@@ -18,6 +20,7 @@
   </style>
 </head>
 <body background="http://i.imgur.com/LlPLCyG.png">
+  
 <img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
 
 <h1>UA Designs Webpage</h1>
