--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
     background-color: white;
     color: black;
     font-family: helvetica;
+    background-repeat:no-repeat;
+    background-size:cover;
     }
   </style>
 <body background="http://i.imgur.com/LlPLCyG.png">
