--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   color: black;
   text-decoration: none;
 }
+a:visited {
+  color: purple;
+}
   </style>
 </head>
 <body background="http://i.imgur.com/LlPLCyG.png">
