--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@ a:hover {
 
 <strong><p>HOME | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></strong>
 
+
 <p>🌓🌔🌕</p>
 
-
+a:hover {
+  color: grey;
+}
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
 <p>Valentina Pardi © 2016<br>
 </body>
