--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 a:hover {
   color: grey;
 }
+
+h1 {
+  color: black;
+  text shadow: 2px 2px 2px grey;
+  transition: 1s all;
+}
+
+h1:hover {
+  color:  #D3D3D3;
+}
+
   </style>
 </head>
 <body background="http://i.imgur.com/LlPLCyG.png">
