--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <title>Valentina Pardi | Home</title>
   <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
     body{
     text-align: center;
@@ -25,6 +26,7 @@ h1 {
   color: black;
   text shadow: 2px 2px 2px grey;
   transition: 1s all;
+  font-family: 'Oswald', sans-serif;
 }
 
 h1:hover {
@@ -36,6 +38,7 @@ h1:hover {
 <body background="http://i.imgur.com/LlPLCyG.png">
   
 <img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
+
 
 <h1>UA Designs Webpage</h1>
 <h3>designed by: Valentina Pardi</h3>
