--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ h1 {
   text shadow: 2px 2px 2px grey;
   transition: 1s all;
   font-family: 'Oswald', sans-serif;
+  margin-top: 2px;
 }
 
 h1:hover {
