--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
     body{
-      margin: 100px 0;
+      margin: 0;
     text-align: center;
     background-color: white;
     color: black;
