--- a/about.html
+++ b/about.html
@@ -13,10 +13,28 @@
     background-repeat:no-repeat;
     background-size:cover;
     }
+    
+    #what-we-do{
+  background-color: black;
+  padding: 20px;
+}
+#what-we-do h1{
+  color: white;
+}
   </style>
 <body background="http://i.imgur.com/LlPLCyG.png">
 <h1>About Me</h1>
 
 <p>My name is Valentina Pardi and I am a Graphic Design student living in Miami.</p> 
+
+<section>
+  
+  <section id="what-we-do">
+  <h1> What we do</h1>
+  <p style="color:white"> Place three icons illustrating what we do </p>
+  
+</section>
+  
+</section>
 
 </body>
