--- a/about.html
+++ b/about.html
@@ -1,40 +1,76 @@
-<!doctype html> 
+<!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>Valentina Pardi | About Me</title>
-  <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
-</head>
-<style>
+  <title>Valentina Pardi | About</title>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+  <style>
     body{
+      margin: 0;
     text-align: center;
     background-color: white;
     color: black;
-    font-family: helvetica;
-    background-repeat:no-repeat;
-    background-size:cover;
+    font-family: 'Dosis', sans-serif;;
+     background-repeat:no-repeat;
+     background-size:cover;
     }
-    
-    #what-we-do{
+    a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  color: grey;
+}
+h1 {
+  color: black;
+  text shadow: 2px 2px 2px grey;
+  transition: 1s all;
+  font-family: 'Oswald', sans-serif;
+}
+h1:hover {
+  color:  #D3D3D3;
+}
+#what-we-do{
   background-color: black;
   padding: 20px;
 }
 #what-we-do h1{
   color: white;
 }
+#who-i-am{
+  margin-top: 30px;
+  background-color: white;
+  padding: 20px;
+}
+#who-i-am h1{
+  color: black;
+}
+nav{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+#hero{
+      padding: 15px;
+      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-size: cover;
+      background-repeat: no-repeat;  
   </style>
-<body background="http://i.imgur.com/LlPLCyG.png">
-<h1>About Me</h1>
-
-<p>My name is Valentina Pardi and I am a Graphic Design student living in Miami.</p> 
-
-<section>
-  
-  <section id="what-we-do">
+</head>
+<section id="hero">
+<body>
+<nav>HOME | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
+<img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
+<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
+<p>Valentina Pardi © 2016<br>
+</section>
+<section id="what-we-do">
   <h1> What we do</h1>
-  <p style="color:white"> Place three icons illustrating what we do </p>
-  
+  <p> <img src="http://i.imgur.com/qQUxNzd.png"></img> </p>
 </section>
-  
+<section id="who-i-am">
+  <h1> Who I am </h1>
+  My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.
+  <img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
 </section>
-
 </body>
