--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@ nav{
 <nav>HOME | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <section id="who-i-am">
   <h1> Who I am </h1>
-  <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.
-  <img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
+  <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
+  <br><img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
 </section>
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
 <p>Valentina Pardi © 2016<br>
