--- a/about.html
+++ b/about.html
@@ -37,13 +37,10 @@ h1:hover {
 #what-we-do h1{
   color: white;
 }
-#who-i-am{
-  margin-top: 30px;
-  background-color: white;
-  padding: 20px;
-}
+
 #who-i-am h1{
   color: black;
+  text-size: 40px;
 }
 nav{
   position: absolute;
