--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ nav{
 </head>
 <section id="hero">
 <body>
-<nav>HOME | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
+<nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <section id="who-i-am">
   <h1> Who I am </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
