--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ nav{
 
 <section id="hero">
 <body>
-<nav>HOME | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
+<nav>HOME | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
 
 
@@ -85,13 +85,4 @@ nav{
 <p>Valentina Pardi © 2016<br>
 </section>
 
-<section id="what-we-do">
-  <h1> What we do</h1>
-  <p style="color:white"> Place three icons illustrating what we do </p>
-</section>
-
-<section id="who-i-am">
-  <h1> Who I am </h1>
-  <img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
-</section>
 </body>
