--- a/about.html
+++ b/about.html
@@ -66,6 +66,6 @@ nav{
 </section>
 <section id="what-we-do">
   <h1> What we do</h1>
-  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> </p>
+  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180"></img> </p>
 </section>
 </body>
