--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ nav{
 <p>🌓🌔🌕</p>
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
-<p>Valentina Pardi © 2016<br>
+<footer>Valentina Pardi © 2016</footer>
 </section>
 
 </body>
