--- a/about.html
+++ b/about.html
@@ -68,4 +68,5 @@ nav{
   <h1> What we do</h1>
   <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180"></img> </p>
 </section>
+<footer>Valentina Pardi © 2016</footer>
 </body>
