--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ nav{
 
 <section id="hero">
 <body>
-<nav>HOME | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
+<nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
 
 
