--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ nav{
 </section>
 <section id="what-we-do">
   <h1> What we do</h1>
-  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="20"></img> </p>
+  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180"></img> </p>
 </section>
 <footer>Valentina Pardi © 2016</footer>
 </body>
