--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
     body{
-      margin: 0;
     text-align: center;
     background-color: white;
     color: black;
@@ -34,6 +33,7 @@ h1:hover {
 }
 #what-we-do h1{
   color: white;
+  padding: 20px;
 }
 
 #who-i-am h1{
