--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@ nav{
 <section id="hero">
 <body>
 <nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
+<article>
 <section id="who-i-am">
   <h1> Who I am </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
@@ -63,8 +64,8 @@ nav{
   <h1> What we do</h1>
   <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180"></img> </p>
 </section>
-
-</section>
+</article>
+<section>
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20"></img></a><br>
 </section>
 
