--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ nav{
 <nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
 
-
+<article>
 <h1>UA Designs Webpage</h1>
 <h3>designed by: Valentina Pardi</h3>
 <p>Welcome to UA Designs webpage.</p>
@@ -80,6 +80,7 @@ nav{
 
 
 <p>🌓🌔🌕</p>
+</article>
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20"></img></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20"></img></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"></a><br>
 </section>
