--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ nav{
 <section id="hero">
   
 <nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
-<img src="http://i.imgur.com/5x9NxZn.png" height="650"></img>
+<img src="http://i.imgur.com/5x9NxZn.png" height="650" alt="UA Designs logo"></img>
 
 <article>
 <h1>UA Designs Webpage</h1>
