--- a/about.html
+++ b/about.html
@@ -53,7 +53,6 @@ nav{
   </style>
 </head>
 <section id="hero">
-<body>
 <nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <article>
 <section id="who-i-am">
@@ -62,7 +61,7 @@ nav{
   <br><img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
 <section id="what-we-do">
   <h1> What we do</h1>
-  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180"></img> </p>
+  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180px"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180px"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180px"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180px"></img> </p>
 </section>
 </article>
 <section>
