--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ a:hover {
   color: grey;
 }
 h1 {
-  color: white;
+  color: black;
   transition: 1s all;
   font-family: 'Oswald', sans-serif;
 }
@@ -56,11 +56,11 @@ nav{
 <nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
 <article>
 <section id="who-i-am">
-  <h1> Who I am </h1>
+  <h1> WHO I AM </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
   <br><img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
 <section id="what-we-do">
-  <h1> What we do</h1>
+  <h1> WHAT WE DO </h1>
   <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180px"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180px"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180px"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180px"></img> </p>
 </section>
 </article>
