--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ nav{
 <section id="who-i-am">
   <h1> WHO I AM </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
-  <br><img src="http://i.imgur.com/QIsco1G.jpg" height="300px">
+  <br><img src="http://i.imgur.com/QIsco1G.jpg" height="300px" alt="Valentina Pardi">
 <section id="what-we-do">
   <h1> WHAT WE DO </h1>
   <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180px"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180px"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180px"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180px"></img> </p>
