--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ nav{
   <br><img src="http://i.imgur.com/QIsco1G.jpg" alt="Valentina Pardi" height="300px">
 <section id="what-we-do">
   <h1> WHAT WE DO </h1>
-  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180px"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180px"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180px"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180px"></img> </p>
+  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180px" alt="Web Design & Development"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180px" alt="Internet Marketing"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180px" alt="Website Maintenance & Support"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180px" alt="Branding & Logo Design"></img> </p>
 </section>
 </article>
 <section>
