--- a/about.html
+++ b/about.html
@@ -59,10 +59,10 @@ nav{
 <section id="who-i-am">
   <h1> WHO I AM </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
-  <br><img src="http://i.imgur.com/QIsco1G.jpg" alt="Valentina Pardi" height="300px">
+  <br><img src="http://i.imgur.com/QIsco1G.jpg" alt="Valentina Pardi" height="300">
 <section id="what-we-do">
   <h1> WHAT WE DO </h1>
-  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180px" alt="Web Design & Development"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180px" alt="Internet Marketing"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180px" alt="Website Maintenance & Support"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180px" alt="Branding & Logo Design"></img> </p>
+  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180" alt="Web Design & Development"></img> <img src="http://i.imgur.com/XtIj4Lo.png" height="180" alt="Internet Marketing"></img> <img src="http://i.imgur.com/lqB5ZpC.png" height="180" alt="Website Maintenance & Support"></img> <img src="http://i.imgur.com/h0BjcNZ.png" height="180" alt="Branding & Logo Design"></img> </p>
 </section>
 </article>
 <section>
