--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ nav{
 <section id="hero">
   
 <nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
-<img src="http://i.imgur.com/5x9NxZn.png" height="650" alt="UA Designs logo"></img>
+<img src="http://i.imgur.com/5x9NxZn.png" height="650" alt="UA Designs logo">
 
 <article>
 <h1>UA Designs Webpage</h1>
@@ -82,7 +82,7 @@ nav{
 <p>🌓🌔🌕</p>
 </article>
 
-<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></img> </a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></img> </a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></img> </a><br>
+<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
 </section>
 <footer>Valentina Pardi © 2016</footer>
 </body>
