--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@ h1 {
   color: black;
   transition: 1s all;
   font-family: 'Oswald', sans-serif;
+  text-size: 80px;
 }
 h1:hover {
   color:  #D3D3D3;
