--- a/about.html
+++ b/about.html
@@ -55,9 +55,10 @@ nav{
       background-repeat: no-repeat;  
   </style>
 </head>
+<article>
 <section id="hero">
 <nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | CONTACT ME<br></nav>
-<article>
+</section>
 <section id="who-i-am">
   <h1> WHO I AM </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
