--- a/contact.html
+++ b/contact.html
@@ -34,15 +34,7 @@ h1:hover {
   background-color: black;
   color: white;
 }
-#what-we-do h1{
-  color: white;
-  text-size: 80px;
-  padding: 20px;
-}
-#who-i-am h1{
-  color: black;
-  text-size: 80px;
-}
+
 nav{
   position: absolute;
   top: 20px;
@@ -60,17 +52,10 @@ nav{
 <nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
 </section>
 <section id="who-i-am">
-  <h1> WHO I AM </h1>
+  <h1> CONTACT ME </h1>
   <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
   <br><img src="http://i.imgur.com/QIsco1G.jpg" alt="Valentina Pardi" height="300">
 </section>
-<section id="what-we-do">
-  <h1> WHAT WE DO </h1>
-  <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180" alt="Web Design & Development"> <img src="http://i.imgur.com/XtIj4Lo.png" height="180" alt="Internet Marketing"> <img src="http://i.imgur.com/lqB5ZpC.png" height="180" alt="Website Maintenance & Support"> <img src="http://i.imgur.com/h0BjcNZ.png" height="180" alt="Branding & Logo Design"> </p>
-</section>
-</article>
-<section>
-<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a>
-</section>
+
 <footer>Valentina Pardi © 2016</footer>
 </body>
