--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,15 @@ nav{
 </section>
 <section id="who-i-am">
   <h1> CONTACT ME </h1>
-  <p>My name is Valentina Pardi, I was born in Venezuela but lived in Argentina for 9 years. I've recently moved to Miami to study Graphic Design.</p>
-  <br><img src="http://i.imgur.com/QIsco1G.jpg" alt="Valentina Pardi" height="300">
+  <h3>Work Hours</h3>
+  </strong>Monday through Friday</strong> 8:00AM-3:00PM<br>
+  </strong>Saturday</strong>3:00PM-5:00PM
+  
+  <h3>Contact Me</h3>
+  </strong>Phone number</strong> 786-724-9760<br>
+  </strong>E-mail</strong> vpardiriccio@gmail.com
+  
+  
 </section>
 
 <footer>Valentina Pardi © 2016</footer>
