--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ nav{
   
   <h3>Contact Me</h3>
   </strong>Phone number</strong> 786-724-9760<br>
-  </strong>E-mail</strong> vpardiriccio@gmail.com
+  </strong>E-mail</strong> vpardiriccio@gmail.com <br>
   
   
 </section>
