--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@ nav{
 <section id="who-i-am">
   <h1> CONTACT ME </h1>
   <h3>Work Hours</h3>
-  </strong>Monday through Friday</strong> 8:00AM-3:00PM<br>
-  </strong>Saturday</strong>3:00PM-5:00PM
+  <strong>Monday through Friday</strong> 8:00AM-3:00PM<br>
+  <strong>Saturday</strong>3:00PM-5:00PM
   
   <h3>Contact Me</h3>
-  </strong>Phone number</strong> 786-724-9760<br>
-  </strong>E-mail</strong> vpardiriccio@gmail.com <br>
+  <strong>Phone number</strong> 786-724-9760<br>
+  <strong>E-mail</strong> vpardiriccio@gmail.com <br>
   
   
 </section>
