--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,10 @@
   <style>
     body{
     text-align: center;
+    background-color:white;
     color: black;
-    font-family: 'Dosis', sans-serif;;
+    font-family: 'Dosis', sans-serif;
+    background-repeat:no-repeat;
      background-size:cover;
     }
     a {
@@ -35,7 +37,6 @@ nav{
   right: 20px;
 }
 #hero{
-      padding: 15px;
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
       background-repeat: no-repeat;  
