--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,9 @@ nav{
 #hero{
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
-      background-repeat: no-repeat;  
+      background-repeat: no-repeat; 
+      padding: 15px;
+      
   </style>
 </head>
 <article>
