--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@ nav{
 </head>
 <article>
 <section id="hero">
-<nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
+<nav><a href="http://valentinapardi.me/">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
 </section>
 <section id="who-i-am">
   <h1> CONTACT ME </h1>
