--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,12 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
     body{
+      margin: 0;
     text-align: center;
-    background-color:white;
+    background-color: white;
     color: black;
-    font-family: 'Dosis', sans-serif;
-    background-repeat:no-repeat;
+    font-family: 'Dosis', sans-serif;;
+     background-repeat:no-repeat;
      background-size:cover;
     }
     a {
@@ -36,11 +37,12 @@ nav{
   top: 20px;
   right: 20px;
 }
+
 #hero{
+      padding: 15px;
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
       background-repeat: no-repeat; 
-      padding: 15px;
       
   </style>
 </head>
