--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,15 @@ nav{
       padding: 15px;
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
-      background-repeat: no-repeat; 
+      background-repeat: no-repeat;
+}
+
+#contact-me {
+  padding: 15px;
+      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+}
       
   </style>
 </head>
@@ -50,13 +58,13 @@ nav{
 <section id="hero">
 <nav><a href="http://valentinapardi.me/">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
 </section>
-<section id="who-i-am">
+<section id="contact-me">
   <h1> CONTACT ME </h1>
-  <h3>Work Hours</h3>
+  <h3>WORK HOURS</h3>
   <strong>Monday through Friday</strong> 8:00AM-3:00PM<br>
   <strong>Saturday</strong>3:00PM-5:00PM
   
-  <h3>Contact Me</h3>
+  <h3>REACH ME AT</h3>
   <strong>Phone number</strong> 786-724-9760<br>
   <strong>E-mail</strong> vpardiriccio@gmail.com <br>
   
