--- a/about.html
+++ b/about.html
@@ -53,7 +53,22 @@ nav{
       padding: 15px;
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
-      background-repeat: no-repeat;  
+      background-repeat: no-repeat;
+}
+
+#who-i-am{
+  padding: 15px;
+      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+}
+
+#what-we-do{
+  padding: 15px;
+      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+}
   </style>
 </head>
 <article>
