--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,8 @@ nav{
   <strong>Phone number</strong> 786-724-9760<br>
   <strong>E-mail</strong> vpardiriccio@gmail.com <br>
   
-  
-</section>
 
+</section>
+ </article>
 <footer>Valentina Pardi © 2016</footer>
 </body>
