--- a/about.html
+++ b/about.html
@@ -30,9 +30,11 @@ h1 {
 h1:hover {
   color:  #D3D3D3;
 }
+
 #what-we-do{
   background-color: black;
   color: white;
+  background:  url(http://i.imgur.com/LlPLCyG.png);
 }
 #what-we-do h1{
   color: white;
