--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a:hover {
 }
 h1 {
   color: black;
-  text shadow: 2px 2px 2px grey;
+  text-shadow: 2px 2px 2px grey;
   transition: 1s all;
   font-family: 'Oswald', sans-serif;
 }
