--- a/midterm.html
+++ b/midterm.html
@@ -16,6 +16,7 @@
     }
     
     #hero{
+    padding: 15px;
     background: url(http://orig07.deviantart.net/8e3a/f/2010/021/4/1/darkwood_by_holseff.png)
     background-size: cover;
     background-repeat: no-repeat;
