--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -4,14 +4,20 @@
 <title>Valentina P | Extra</title>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
+
   <style>
   
     body{
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     color: white;
-    background-image: url(http://wallpaperbeta.com/wallpaper_3840x2160/table_journals_notebook_phone_headphones_ultra_3840x2160_hd-wallpaper-405277.jpg)
+    background-image: url(http://wallpaperbeta.com/wallpaper_3840x2160/table_journals_notebook_phone_headphones_ultra_3840x2160_hd-wallpaper-405277.jpg);
     background-repeat: no-repeat; 
+    background-size: cover;
+    }
+  
+    #extra-credit{
+      background-color: black;
     }
   
   </style>
@@ -19,7 +25,7 @@
 </head>
 
 <body>
-    <section>
+    <section id="extra-credit">
     <h1> EXTRA CREDIT </h1>
     <h3> Code this website! </h3>
     
