--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -17,19 +17,17 @@
     }
   
     #extra-credit{
-      background-color: black;
+      background-color: rgba(0, 0, 0, 0.4);
     }
   
   </style>
 
 </head>
 
-<section id="extra-credit">
-    <h1> EXTRA CREDIT </h1>
-    <h3> Code this website! </h3>
-    
-    </section>
-
 <body>
-    
+    <section id="extra-credit">
+    <h1> EXTRA CREDIT </h1>
+    <p>Code this website!</p>
+    </section>
 </body>
+
