--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -18,6 +18,11 @@
   
     #extra-credit{
       background-color: rgba(0, 0, 0, 0.4);
+      position: absolute;
+      font-size: 18px;
+      left: 0%;
+      top: 50%;
+      width: 100%;
     }
   
   </style>
