--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -2,14 +2,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Valentina P | Extra</title>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
 
   <style>
   
     body{
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: white;
     background-image: url(http://wallpaperbeta.com/wallpaper_3840x2160/table_journals_notebook_phone_headphones_ultra_3840x2160_hd-wallpaper-405277.jpg);
     background-repeat: no-repeat; 
