--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -24,6 +24,11 @@
       top: 50%;
       width: 100%;
     }
+    
+    button{
+      color: rgb(0,206,209);
+      position:absolute;
+    }
   
   </style>
 
@@ -34,5 +39,6 @@
     <h1> EXTRA CREDIT </h1>
     <p>Code this website!</p>
     </section>
+    <p><button> START NOW! </button></p>
 </body>
 
