--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -26,7 +26,7 @@
     }
     
     button{
-      color: rgb(0,206,209);
+      background-color: rgb(0,206,209);
       position:absolute;
     }
   
