--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -25,9 +25,13 @@
       width: 100%;
     }
     
-    button{
+    #start-now{
       background-color: rgb(0,206,209);
-      position:absolute;
+      position: absolute;
+      font-size: 18px;
+      left: 0%;
+      top: 50%;
+      width: 100%;
     }
   
   </style>
@@ -39,6 +43,9 @@
     <h1> EXTRA CREDIT </h1>
     <p>Code this website!</p>
     </section>
-    <p><button> START NOW! </button></p>
+    <section id="start-now">
+      <p>START NOW!</p>
+    </section>
+
 </body>
 
