--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -23,15 +23,16 @@
       left: 0%;
       top: 50%;
       width: 100%;
+      margin: 20px;
     }
     
     #start-now{
       background-color: rgb(0,206,209);
       position: absolute;
-      font-size: 18px;
-      left: 0%;
-      top: 50%;
-      width: 100%;
+      font-size: 10px;
+      left: 41%;
+      top: 67%;
+      width: 18%;
     }
   
   </style>
