--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -25,7 +25,7 @@
       width: 100%;
     }
     
-    #start-now{
+    #p{
       background-color: rgb(0,206,209);
       position: absolute;
       font-size: 10px;
@@ -41,10 +41,8 @@
 <body>
     <section id="extra-credit">
     <h1> EXTRA CREDIT </h1>
-    <p>Code this website!</p>
-    </section>
-    <section id="start-now">
-      <p>START NOW!</p>
+    Code this website!<br>
+    <p>START NOW!</p>
     </section>
 
 </body>
