--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -29,6 +29,8 @@
       background-color: rgb(0,206,209);
       position: absolute;
       font-size: 15px;
+      left: 41%;
+      width: 18%;
     }
   
   </style>
