--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -30,8 +30,13 @@
       position: absolute;
       font-size: 15px;
       left: 41%;
-      width: 18%;
+      width: 40%;
     }
+    
+a{
+  color: rgb(0,206,209);
+  text-decoration: none;
+}
   
   </style>
 
@@ -42,6 +47,7 @@
     <h1> EXTRA CREDIT </h1>
     Code this website!<br>
     <p>START NOW!</p>
+    It's easy if you know your <a href="http://www.w3schools.com/html/">HTML</a> and <a href="http://www.w3schools.com/css/">CSS</a>
     </section>
 
 </body>
