--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -46,8 +46,8 @@ a{
     <section id="extra-credit">
     <h1> EXTRA CREDIT </h1>
     Code this website!<br>
-    <p>START NOW!</p>
-    It's easy if you know your <a href="http://www.w3schools.com/html/">HTML</a> and <a href="http://www.w3schools.com/css/">CSS</a>
+    <h4>START NOW!</h4>
+    <p>It's easy if you know your <a href="http://www.w3schools.com/html/">HTML</a> and <a href="http://www.w3schools.com/css/">CSS</a></p>
     </section>
 
 </body>
