--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -29,8 +29,9 @@
       background-color: rgb(0,206,209);
       position: absolute;
       font-size: 15px;
-      left: 41%;
-      width: 40%;
+      left: 44%;
+      width: 13%;
+      top: 50%;
     }
     
 a{
