--- a/index.html
+++ b/index.html
@@ -31,42 +31,36 @@ h1 {
 h1:hover {
   color:  #D3D3D3;
 }
-
 #what-we-do{
   background-color: black;
   padding: 20px;
 }
-
 #what-we-do h1{
   color: white;
 }
-
 #who-i-am{
   margin-top: 30px;
   background-color: white;
   padding: 20px;
 }
-
 #who-i-am h1{
   color: black;
 }
-
 nav{
   position: absolute;
   top: 20px;
   right: 20px;
 }
-
 #hero{
       padding: 15px;
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
       background-repeat: no-repeat;  
 }
-
   </style>
 </head>
 
+<body>
 <section id="hero">
   
 <nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
@@ -75,7 +69,7 @@ nav{
 <article>
 <h1>UA Designs Webpage</h1>
 <h3>designed by: Valentina Pardi</h3>
-<p>Welcome to UA Designs webpage.</p>
+<p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
 
 
 
@@ -83,6 +77,15 @@ nav{
 </article>
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
+Valentina Pardi © 2016
 </section>
-<footer>Valentina Pardi © 2016</footer>
+
+<script>
+//window.open("http://valentinapardi.me/sale.html","", "height=200,width=300,top=300,left=800");
+function showPrices(event){
+  window.open("prices.html","", "height=200,width=300,top=300,left=800");
+  event.preventDEFAULT();
+}
+
+</script>
 </body>
