--- a/prices.html
+++ b/prices.html
@@ -9,6 +9,8 @@
 <table border="1">
 	<tr><td>Service</td><td>Price</td></tr>
 	<tr><td>Logo Design</td><td>$500</td></tr>
+	<tr><td>Album Design</td><td>$700</td></tr>
+	<tr><td>Advertising</td><td>$1000</td></tr>
 </table>
 
 </body>
