--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Valentina Pardi © 2016
 </section>
 
 <script>
-//window.open("http://valentinapardi.me/sale.html","", "height=200,width=300,top=300,left=800");
+//window.open("http://valentinapardi.me/prices.html","", "height=200,width=300,top=300,left=800");
 function showPrices(event){
   window.open("prices.html","", "height=200,width=300,top=300,left=800");
   event.preventDEFAULT();
