--- a/prices.html
+++ b/prices.html
@@ -2,7 +2,21 @@
 
 <head>
 	<title> Valentina Pardi|Prices</title>
+	<meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
+  <title>Valentina Pardi | Home</title>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 </head>
+
+<style>
+	#hero{
+      padding: 15px;
+      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-size: cover;
+      background-repeat: no-repeat;  
+}
+</style>
 <body>
 <h2> Here's our price list.</h2>
 
