--- a/prices.html
+++ b/prices.html
@@ -10,7 +10,7 @@
 </head>
 
 <style>
-	#hero{
+	body{
       padding: 15px;
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
