--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      background-repeat: no-repeat;
      background-size: cover;
      padding: 15px;
-      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-image:  url(http://i.imgur.com/LlPLCyG.png);
     }
     a {
   color: black;
