--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@ nav{
   right: 20px;
 }
 
+footer {
+  background-image: linear-gradient(-90deg, #66717F, #761E26);
+}
   </style>
 </head>
 
@@ -74,8 +77,9 @@ nav{
 </article>
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
-Valentina Pardi © 2016
 </section>
+
+<footer>Valentina Pardi © 2016</footer>
 
 <script>
 //window.open("http://valentinapardi.me/prices.html","", "height=200,width=300,top=300,left=800");
