--- a/about.html
+++ b/about.html
@@ -83,6 +83,7 @@ nav{
 <section>
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a>
 </section>
-<iframe src="Resume Valentina Pardi.pdf" width="500" height="800"></iframe>
+<iframe src="Valentina.Pardi.Resume.pdf" width="500" height="800">
+</iframe>
 <footer>Valentina Pardi © 2016</footer>
 </body>
