--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      background-size: cover;
      padding: 15px;
       background-image:  url(http://i.imgur.com/LlPLCyG.png);
+      background-attachment: fixed;
     }
     a {
   color: black;
