--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     font-family: 'Dosis', sans-serif;;
      background-repeat:no-repeat;
      background-size:cover;
+     background-attachment: fixed;
     }
     a {
   color: black;
