--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     text-align: center;
     background-color: white;
     color: black;
-    font-family: 'Dosis', sans-serif;;
+    font-family: 'Dosis', sans-serif;
      background-repeat:no-repeat;
      background-size:cover;
      background-attachment: fixed;
