--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     font-family: 'Dosis', sans-serif;
      background-repeat:no-repeat;
      background-size:cover;
+     background:  url(http://i.imgur.com/LlPLCyG.png);
+     background-attachment: fixed;
     }
     a {
   color: black;
