--- a/about.html
+++ b/about.html
@@ -13,8 +13,6 @@
     font-family: 'Dosis', sans-serif;
      background-repeat:no-repeat;
      background-size:cover;
-     background:  url(http://i.imgur.com/LlPLCyG.png);
-     background-attachment: fixed;
     }
     a {
   color: black;
@@ -59,6 +57,13 @@ nav{
       background-repeat: no-repeat;
 }
 
+#who-i-am{
+  padding: 15px;
+      background:  url(http://i.imgur.com/LlPLCyG.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+}
 
   </style>
 </head>
