--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ footer {
 <body>
 <section id="hero">
   
-<nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
+<nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | <a href="http://valentinapardi.me/work">WORK</a> | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
 <img src="http://i.imgur.com/5x9NxZn.png" height="650" alt="UA Designs logo">
 
 <article>
